RESOLVED FIXED172089
Unused lambda in TextFragmentIterator::TextFragment::split()
https://bugs.webkit.org/show_bug.cgi?id=172089
Summary Unused lambda in TextFragmentIterator::TextFragment::split()
David Kilzer (:ddkilzer)
Reported 2017-05-13 22:04:47 PDT
<https://webkit.org/b/000000> Reviewed by NOBODY (OOPS!). Fixes the following warning with newer clang: Source/WebCore/rendering/SimpleLineLayoutTextFragmentIterator.h:149:39: error: lambda capture 'textFragmentIterator' is not used [-Werror,-Wunused-lambda-capture] auto updateFragmentProperties = [&textFragmentIterator] (TextFragment& fragment, unsigned start, unsigned end, float width) ^ * rendering/SimpleLineLayoutTextFragmentIterator.h: (WebCore::SimpleLineLayout::TextFragmentIterator::TextFragment::split): - Remove unused lambda. --- 2 files changed, 19 insertions(+), 2 deletions(-)
Attachments
Patch (2.16 KB, patch)
2017-05-13 22:04 PDT, David Kilzer (:ddkilzer)
no flags
Patch (4.90 KB, patch)
2017-05-14 08:48 PDT, alan
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (931.88 KB, application/zip)
2017-05-14 10:21 PDT, Build Bot
no flags
Patch (4.92 KB, patch)
2017-05-14 13:35 PDT, alan
no flags
David Kilzer (:ddkilzer)
Comment 1 2017-05-13 22:04:48 PDT
alan
Comment 2 2017-05-14 08:47:06 PDT
Comment on attachment 310065 [details] Patch Let's do a bit of a cleanup here. Patch is coming up.
alan
Comment 3 2017-05-14 08:48:25 PDT
Konstantin Tokarev
Comment 4 2017-05-14 09:04:59 PDT
Comment on attachment 310091 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=310091&action=review > Source/WebCore/ChangeLog:3 > + Unused lambda in TextFragmentIterator::TextFragment::split() It's not an accurate description of this patch anymore
David Kilzer (:ddkilzer)
Comment 5 2017-05-14 09:19:09 PDT
Comment on attachment 310091 [details] Patch r=me
David Kilzer (:ddkilzer)
Comment 6 2017-05-14 09:20:17 PDT
(In reply to Konstantin Tokarev from comment #4) > Comment on attachment 310091 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=310091&action=review > > > Source/WebCore/ChangeLog:3 > > + Unused lambda in TextFragmentIterator::TextFragment::split() > > It's not an accurate description of this patch anymore The patch is still removing an unused lambda, it's just doing a little more.
alan
Comment 7 2017-05-14 09:22:20 PDT
(In reply to David Kilzer (:ddkilzer) from comment #6) > (In reply to Konstantin Tokarev from comment #4) > > Comment on attachment 310091 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=310091&action=review > > > > > Source/WebCore/ChangeLog:3 > > > + Unused lambda in TextFragmentIterator::TextFragment::split() > > > > It's not an accurate description of this patch anymore > > The patch is still removing an unused lambda, it's just doing a little more. Indeed. Guess I could expand the title a bit.
Build Bot
Comment 8 2017-05-14 10:21:34 PDT
Comment on attachment 310091 [details] Patch Attachment 310091 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3739235 New failing tests: fast/css/target-fragment-match.html
Build Bot
Comment 9 2017-05-14 10:21:35 PDT
Created attachment 310093 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
alan
Comment 10 2017-05-14 13:35:09 PDT
alan
Comment 11 2017-05-14 13:35:58 PDT
Comment on attachment 310093 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 Seems unrelated.
WebKit Commit Bot
Comment 12 2017-05-14 14:16:45 PDT
Comment on attachment 310095 [details] Patch Clearing flags on attachment: 310095 Committed r216849: <http://trac.webkit.org/changeset/216849>
WebKit Commit Bot
Comment 13 2017-05-14 14:16:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.