Remove unused lambda in TextFragmentIterator::TextFragment::split() and cleanup dependencies. https://bugs.webkit.org/show_bug.cgi?id=172089

Reviewed by David Kilzer.

* rendering/SimpleLineLayout.cpp:
(WebCore::SimpleLineLayout::splitFragmentToFitLine):
* rendering/SimpleLineLayoutTextFragmentIterator.h:
(WebCore::SimpleLineLayout::TextFragmentIterator::TextFragment::split):
(WebCore::SimpleLineLayout::TextFragmentIterator::TextFragment::splitWithHyphen):


Canonical link: https://commits.webkit.org/189032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216849 268f45cc-cd09-0410-ab3c-d52691b4dbfc